--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,9 @@
     const BOT_IMG = "https://image.flaticon.com/icons/svg/327/327779.svg";
     const PERSON_IMG = "https://image.flaticon.com/icons/svg/145/145867.svg";
     const BOT_NAME = "ChatBot";
-    const PERSON_NAME = "You";
+    const query = window.location.search;
+    const allParams = new URLSearchParams(query);
+    const PERSON_NAME = allParams.get('email');
 
     msgerForm.addEventListener("submit", event => {
       event.preventDefault();
