Logging in works with DB

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,9 @@
 
 <body>
   <!-- partial:index.partial.html -->
+  <form action='logout' method='GET'>
+      <input type="submit" class="btnLogout" name="btnLogout" value="Log out">
+  </form>
   <section class="msger">
     <header class="msger-header">
       <div class="msger-header-title">
