--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">
 </head>
 <body>
-    <div>Home page</div>
+    <div class="title" >Home page</div>
         <form action='login' method='GET'>
             <input class="btnLogin" type="submit" name="btnLogin" value="Log in">
         </form>
