--- a/templates/login.html
+++ b/templates/login.html
@@ -5,10 +5,25 @@
     <title>Log in</title>
 </head>
 <body>
-    <form action='chat' method='GET'>
-    <input type='text' name='email' id='email' placeholder='email'/>
-    <input type='password' name='password' id='password' placeholder='password'/>
-    <input type='submit' name='submit'/>
+    <form action='login' method='POST'>
+        <h3 class="title">Login</h3>
+        <div class="field">
+            <div class="control">
+                <input type='text' name='email' id='email' placeholder='email'/>
+            </div>
+        </div>
+        <div class="field">
+            <div class="control">
+                <input type='password' name='password' id='password' placeholder='password'/>
+            </div>
+        </div>
+        <div class="field">
+            <label class="checkbox">
+                <input type="checkbox">
+                Remember me
+            </label>
+        </div>
+        <input type='submit' name='submit'/>
    </form>
 </body>
 </html>
