Fixed login, pass info to last page

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">
 </head>
 <body>
-    <div class="title" >Home page</div>
-        <form action='login' method='GET'>
-            <input class="btnLogin" type="submit" name="btnLogin" value="Log in">
-        </form>
+    <div id="title">Home page</div>
+    <form action='login' method='GET'>
+        <input id="btnLogin" type="submit" name="btnLogin" value="Log in">
+    </form>
 
 </body>
 </html>
