--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -1,7 +1,11 @@
-.btnLogin{
+#btnLogin{
     position:relative;
     top: 25px;
     left: 50%;
 }
 
+#title {
+    margin: 0 auto;
+    font-size: 20px;
+}
 
