--- a/templates/therapist_page.html
+++ b/templates/therapist_page.html
@@ -8,8 +8,23 @@
 
 </head>
 <body>
-  <div id="therName" class="d-flex justify-content-center">Hello, {therName:}!</div>
-  <div id="table" class="d-flex justify-content-center">{table:}</div>
+<form method="POST" action="/temporary">
+  <div id="therName" class="d-flex justify-content-center">Hello, {{ therName }}!</div>
+  <div id="table" class="d-flex justify-content-center">{{ table }}</div>
+
+
+    <div class="field">
+        <div class="d-flex justify-content-center">
+            <input class="input is-large" type="text" name="userName" placeholder="userName" autofocus="">
+        </div>
+    </div>
+
+    <div class="d-flex justify-content-center">
+        <button class="button is-block is-info is-large is-fullwidth">See their page</button>
+    </div>
+  </form>
+
+
 
 </body>
 </html>
