--- a/templates/therapist_page.html
+++ b/templates/therapist_page.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-<form method="POST" action="/temporary">
+<form method="POST">
   <div id="therName" class="d-flex justify-content-center">Hello, {{ therName }}!</div>
   <div id="table" class="d-flex justify-content-center">{{ table }}</div>
 
@@ -22,6 +22,7 @@
     <div class="d-flex justify-content-center">
         <button class="button is-block is-info is-large is-fullwidth">See their page</button>
     </div>
+
   </form>
 
 
