--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -8,12 +8,39 @@
 
 </head>
 <body>
-    <div class="d-flex justify-content-center" id="title">Home page</div>
-    <div class="d-flex justify-content-center">
-        <form action='login' method='GET'>
-            <input id="btnLogin" type="submit" name="btnLogin" value="Log in">
-        </form>
+    <nav id="navBar" class="navbar navbar-expand-lg">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <form action='login' method='GET'>
+                <input class="btn btn-primary" id="btnLogin" type="submit" name="btnLogin" value="Log in">
+            </form>
+          </li>
+            <li class="nav-item">
+            <form action='signup' method='GET'>
+                <input class="btn btn-primary" id="btnSignup" type="submit" name="btnSignup" value="Sign up">
+            </form>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div id="homeImage">
+        <div class="d-flex justify-content-center" id="title">Welcome to the Therapy Page!</div>
     </div>
+    <div id="subtitle">
+        <div> Free Yourself from</div>
+        <div> Stress & Struggle</div>
+        <div> Through Therapy</div>
+    </div>
+    <div id="description">
+        <div>At X, not only do we provide free therapy to all kinds of people that</div>
+        <div>need it, we also create a personalized paper for each user of the application.</div>
+        <div>Our goal is to empower people to tell their story, to face their most</div>
+        <div>destructive problems and to make a difference in their lives</div>
+    </div>
+
+
+
 
 
 </body>
