--- a/templates/index.html
+++ b/templates/index.html
@@ -13,16 +13,30 @@
 </head>
 
 <body>
-  <form action='logout' btnLogoutmethod='GET'>
-      <input type="submit" id="btnLogout" name="btnLogout" value="Log out">
-  </form>
-  <section class="msger">
-    <header class="msger-header">
-      <div class="msger-header-title">
-        Suicide Hotline Chatbot
-      </div>
-    </header>
 
+<nav id="navBar" class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <form action='/' btnLogoutmethod='GET'>
+            <input class="btn btn-primary" type="submit" id="btnHome" name="btnHome" value="Home">
+        </form>
+      </li>
+      <li class="nav-item">
+        <form action='logout' btnLogoutmethod='GET'>
+            <input class="btn btn-primary" type="submit" id="btnLogout" name="btnLogout" value="Log out">
+        </form>
+      </li>
+      <li class="nav-item">
+        <form action='finish' btnFinishmethod='GET'>
+            <input class="btn btn-primary" type="submit" id="btnFinish" name="btnFinish" value="Submit">
+        </form>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+  <section class="msger">
     <main class="msger-chat">
       <div class="msg left-msg">
         <div class="msg-img" style="background-image: url(https://image.flaticon.com/icons/svg/327/327779.svg)"></div>
@@ -31,21 +45,19 @@
             <div class="msg-info-name">ChatBot</div>
           </div>
           <div class="msg-text">
-            Hi, welcome to ChatBot! Go ahead and send me a message. 😄
+            Hi, welcome to the Therapy ChatBot! How can I help you?
           </div>
         </div>
       </div>
     </main>
 
     <form class="msger-inputarea">
-      <input type="text" class="msger-input" id="textInput" placeholder="Enter your message...">
+      <input type="text" class="msger-input" id="textInput" placeholder="Enter your message">
       <button type="submit" class="msger-send-btn">Send</button>
     </form>
   </section>
 
-  <form action='finish' btnFinishmethod='GET'>
-      <input type="submit" id="btnFinish" name="btnFinish" value="Submit">
-  </form>
+
   <!-- partial -->
   <script src='https://use.fontawesome.com/releases/v5.0.13/js/all.js'></script>
   <script>
