--- a/templates/login.html
+++ b/templates/login.html
@@ -3,29 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Log in</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/login.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
 </head>
 <body>
-    <form action='login' method='POST'>
-        <h3 id="title" class="d-flex justify-content-center">Login</h3>
-        <div class="field">
-            <div class="d-flex justify-content-center">
-                <input type='text' name='email' id='email' placeholder='email'/>
+    <nav id="navBar" class="navbar navbar-expand-lg">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <form action='signup' method='GET'>
+                    <input class="btn btn-primary" id="btnSignup" type="submit" name="btnSignup" value="Sign up">
+                </form>
+            </li>
+        </ul>
+      </div>
+    </nav>
+    <div id="allLogin">
+        <form action='login' method='POST'>
+            <h3 id="title" class="d-flex justify-content-center">Login</h3>
+            <div id="emailDiv" class="field">
+                <div class="d-flex justify-content-center">
+                    <input type='text' name='email' id='email' placeholder='email'/>
+                </div>
             </div>
-        </div>
-        <div class="field">
-            <div class="d-flex justify-content-center">
-                <input type='password' name='password' id='password' placeholder='password'/>
+            <div id="passwordDiv" class="field">
+                <div class="d-flex justify-content-center">
+                    <input type='password' name='password' id='password' placeholder='password'/>
+                </div>
             </div>
-        </div>
-        <div class="d-flex justify-content-center">
-            <input type='submit' name = "loginBtn" value='Log in as user'/>
-        </div>
-        <div class="d-flex justify-content-center">
-            <input type='submit' name = "loginBtn" value='Log in as therapist'/>
-        </div>
+            <div class="d-flex justify-content-center">
+                <input class="btn btn-primary" id="userBtn" type='submit' name = "loginBtn" value='Log in'/>
+            </div>
 
-   </form>
+        </form>
+    </div>
 </body>
 </html>
