--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,39 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Signup</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/signup.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
 </head>
 <body>
-<div class="column is-4 is-offset-4">
+<div class="column is-4 is-offset-4" id="allSignup">
     <h3 id="title" class="d-flex justify-content-center">Sign Up</h3>
     <div class="box">
         <form method="POST" action="/signup">
-            <div class="field">
+            <div class="field" id="email">
                 <div class="d-flex justify-content-center">
                     <input class="input is-large" type="email" name="email" placeholder="Email" autofocus="">
                 </div>
             </div>
 
-            <div class="field">
+            <div class="field" id="name">
                 <div class="d-flex justify-content-center">
                     <input class="input is-large" type="text" name="name" placeholder="Name" autofocus="">
                 </div>
             </div>
 
-            <div class="field">
+            <div class="field" id="password">
                 <div class="d-flex justify-content-center">
                     <input class="input is-large" type="password" name="password" placeholder="Password">
                 </div>
             </div>
 
-            <div class="field">
+            <div class="field" id="type">
                 <div class="d-flex justify-content-center">
-                    <input class="input is-large" type="text" name="type" placeholder="User/Psychologist" autofocus="">
+                    <input class="input is-large" type="text" name="type" placeholder="user/therapist" autofocus="">
                 </div>
             </div>
             <div class="d-flex justify-content-center">
-                <button class="button is-block is-info is-large is-fullwidth">Sign Up</button>
+                <button id="signup" class="btn btn-primary button is-block is-info is-large is-fullwidth">Sign Up</button>
             </div>
 
         </form>
