--- a/templates/therapist_page.html
+++ b/templates/therapist_page.html
@@ -3,12 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Therapist Page</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/therapist_page.css') }}">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
 </head>
 <body>
 <form method="POST">
+
+<!--    <nav id="navBar" class="navbar navbar-expand-lg">-->
+<!--      <div class="collapse navbar-collapse" id="navbarSupportedContent">-->
+<!--        <ul class="navbar-nav mr-auto">-->
+<!--          <li class="nav-item">-->
+<!--            <form action='/' btnLogoutmethod='GET'>-->
+<!--                <input class="btn btn-primary" type="submit" id="btnHome" name="btnHome" value="Home">-->
+<!--            </form>-->
+<!--          </li>-->
+<!--          <li class="nav-item">-->
+<!--            <form action='logout' btnLogoutmethod='GET'>-->
+<!--                <input class="btn btn-primary" type="submit" id="btnLogout" name="btnLogout" value="Log out">-->
+<!--            </form>-->
+<!--          </li>-->
+<!--        </ul>-->
+<!--      </div>-->
+<!--    </nav>-->
+
   <div id="therName" class="d-flex justify-content-center">Hello, {{ therName }}!</div>
   <div id="table" class="d-flex justify-content-center">{{ table }}</div>
 
@@ -20,7 +39,11 @@
     </div>
 
     <div class="d-flex justify-content-center">
-        <button class="button is-block is-info is-large is-fullwidth">See their page</button>
+        <input class="btn btn-primary" id="pageBtn" type='submit' name = "button" value='See their page'/>
+    </div>
+
+    <div class="d-flex justify-content-center">
+        <input class="btn btn-primary" id="messageBtn" type='submit' name = "button" value='Send a message'/>
     </div>
 
   </form>
