--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,11 @@
             <input class="btn btn-primary" type="submit" id="btnFinish" name="btnFinish" value="Submit">
         </form>
       </li>
+      <li class="nav-item">
+        <form action='myMessages' btnFinishmethod='GET'>
+            <input class="btn btn-primary" type="submit" id="btnMessages" name="btnMessages" value="See my messages">
+        </form>
+      </li>
     </ul>
   </div>
 </nav>
