--- a/templates/therapist_page.html
+++ b/templates/therapist_page.html
@@ -9,25 +9,23 @@
 
 </head>
 <body>
+    <nav id="navBar" class="navbar navbar-expand-lg">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <form action='/' method='GET'>
+                    <input class="btn btn-primary" id="btnHome" type="submit" name="btnHome" value="Home">
+                </form>
+            </li>
+            <li class="nav-item">
+                <form action='logout' method='GET'>
+                    <input class="btn btn-primary" id="btnLogout" type="submit" name="btnLogout" value="Log out">
+                </form>
+            </li>
+        </ul>
+      </div>
+    </nav>
 <form method="POST">
-
-<!--    <nav id="navBar" class="navbar navbar-expand-lg">-->
-<!--      <div class="collapse navbar-collapse" id="navbarSupportedContent">-->
-<!--        <ul class="navbar-nav mr-auto">-->
-<!--          <li class="nav-item">-->
-<!--            <form action='/' btnLogoutmethod='GET'>-->
-<!--                <input class="btn btn-primary" type="submit" id="btnHome" name="btnHome" value="Home">-->
-<!--            </form>-->
-<!--          </li>-->
-<!--          <li class="nav-item">-->
-<!--            <form action='logout' btnLogoutmethod='GET'>-->
-<!--                <input class="btn btn-primary" type="submit" id="btnLogout" name="btnLogout" value="Log out">-->
-<!--            </form>-->
-<!--          </li>-->
-<!--        </ul>-->
-<!--      </div>-->
-<!--    </nav>-->
-
   <div id="therName" class="d-flex justify-content-center">Hello, {{ therName }}!</div>
   <div id="table" class="d-flex justify-content-center">{{ table }}</div>
 
