--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -25,15 +25,20 @@
       </div>
     </nav>
     <div id="homeImage">
-        <div class="d-flex justify-content-center" id="title">Welcome to the Therapy Page!</div>
+        <div class="d-flex justify-content-center" id="title">Welcome to FYST - Fight the depression!</div>
     </div>
     <div id="subtitle">
         <div> Free Yourself from</div>
         <div> Stress & Struggle</div>
         <div> Through Therapy</div>
     </div>
+    <div class="d-flex justify-content-center">
+        <form action='chat' method='GET'>
+            <input class="btn btn-primary" id="btnFree" type="submit" name="btnFree" value="Try the free version">
+        </form>
+    </div>
     <div id="description">
-        <div>At X, not only do we provide free therapy to all kinds of people that</div>
+        <div>At FYST, not only do we provide free therapy to all kinds of people that</div>
         <div>need it, we also create a personalized paper for each user of the application.</div>
         <div>Our goal is to empower people to tell their story, to face their most</div>
         <div>destructive problems and to make a difference in their lives</div>
