--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
     const BOT_IMG = "https://image.flaticon.com/icons/svg/327/327779.svg";
     const PERSON_IMG = "https://image.flaticon.com/icons/svg/145/145867.svg";
     const BOT_NAME = "ChatBot";
-    var PERSON_NAME;
+    var PERSON_NAME = "FreeUser";
 
     getUserName();
 
@@ -128,7 +128,7 @@
 
       // User name
       $.get("/userName").done(function (data) {
-        console.log(data);
+        console.log(data.toString());
         PERSON_NAME = data;
 
       });
