--- a/templates/therapist_page.html
+++ b/templates/therapist_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Therapist Page</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/therapist_page.css') }}">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
 </head>
@@ -37,16 +37,21 @@
     </div>
 
     <div class="d-flex justify-content-center">
-        <input class="btn btn-primary" id="pageBtn" type='submit' name = "button" value='See their page'/>
+        <input class="btn btn-primary" id="detailsBtn" type='submit' name = "button" value="See the user's details"/>
     </div>
 
-    <div class="d-flex justify-content-center">
-        <input class="btn btn-primary" id="messageBtn" type='submit' name = "button" value='Send a message'/>
-    </div>
-
-  </form>
 
 
+</form>
+
+<script>
+    jQuery(document).ready(function($) {
+    $(".clickable-row").click(function() {
+        // window.location = $(this).data("href");
+        console.log("AAAAA")
+    });
+});
+</script>
 
 </body>
 </html>
